lib/bytestream.h

typedef struct _ByteStream {
  char* filename;
  size_t size;

  uint8_t* data;
  uint32_t offset;

  int exhausted;
} ByteStream;
ByteStream* bsalloc(unsigned int size);
ByteStream* bsmap(char* filename);
int bsfree(ByteStream* bstream);
void bsseek(ByteStream* bs, uint32_t offset);
void bsreset(ByteStream* bs);
unsigned int bsread(ByteStream* bs, uint8_t* buf, size_t size);
unsigned int bsread_offset(ByteStream* bs, uint8_t* buf, size_t size,
			   uint32_t offset);
int bssave(ByteStream* bs, char* filename);