lib/leb128.h

typedef struct _leb128 {
  uint8_t data[5];
  unsigned int size;
} leb128_t;
uint32_t ul128toui(leb128_t uleb);
int32_t ul128p1toi(leb128_t ulebp1);
int32_t sl128toi(leb128_t sleb);
void uitoul128(leb128_t* uleb, uint32_t num);
void itoul128p1(leb128_t* leb, int32_t num);
void itosl128(leb128_t* leb, int32_t num);