dx/dex.py

#!/usr/bin/python

from ctypes import cdll
from ctypes import Structure
from ctypes import POINTER, pointer

from ctypes import c_int, c_uint, c_uint8, c_uint16, c_uint32
from ctypes import c_char_p

from ctypes import create_string_buffer

#Bytestream
class _ByteStream(Structure):
    _fields_ = [
        ('filename',c_char_p),
        ('size',c_uint32),
        ('data',POINTER(c_uint8)),
        ('offset',c_uint32),
        ('exhausted',c_int),
        ]

class ByteStream(object):
    def __init__(self,fname=None,size=None):
        if fname != None:
            self._bs = dxlib.bsmap(fname)
        elif size != None:
            self._bs = dxlib.bsalloc(size)
        else:
            raise(Exception("Not enough parameters for ByteStream"))

    def __del__(self):
        dxlib.bsfree(self._bs)

    def read(self,size):
        buf = create_string_buffer('\x00' * size)
        ret = dxlib.bsread(self._bs,buf,size)
        return buf.value

    def read_offset(self,size,offset):
        buf = create_string_buffer('\x00' * size)
        ret = dxlib.bsread_offset(self._bs,buf,size,offset)
        return buf.value

    def seek(self,offset):
        dxlib.bsseek(self._bs,offset)

    def reset(self):
        dxlib.bsreset(self._bs)

    def save(self,filename):
        dxlib.bssave(self._bs,filename)

    def exhausted(self):
        return (self._bs.contents.exhausted != 0)

#LEB128
class Leb128(Structure):
    _fields_ = [
        ('data',c_uint8 * 5),
        ('size',c_uint),
        ]

class ULeb128(Leb128):
    def __init__(self,val=None):
        if val != None:
            dxlib.uitoul128(pointer(self),val)

    def __int__(self):
        return dxlib.ul128toui(self)

class SLeb128(Leb128):
    def __init__(self,val=None):
        if val != None:
            dxlib.itosl128(pointer(self),val)

    def __int__(self):
        return dxlib.sl128toi(self)

class ULeb128p1(Leb128):
    def __init__(self,val=None):
        if val != None:
            dxlib.itoul128p1(pointer(self),val)

    def __int__(self):
        return dxlib.ul128p1toi(self)

#Dex
class Metadata(Structure):
    _fields_ = [
        ('corrupted',c_uint),
        ('offset', c_uint32),
        ]

class DexHeaderItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('magic', c_uint8 * 8),
        ('checksum', c_uint32),
        ('signature', c_uint8 * 20),
        ('file_size', c_uint32),
        ('header_size', c_uint32),
        ('endian_tag', c_uint32),
        ('link_size', c_uint32),
        ('link_off', c_uint32),
        ('map_off', c_uint32),
        ('string_ids_size', c_uint32),
        ('string_ids_off', c_uint32),
        ('type_ids_size', c_uint32),
        ('type_ids_off', c_uint32),
        ('proto_ids_size', c_uint32),
        ('proto_ids_off', c_uint32),
        ('field_ids_size', c_uint32),
        ('field_ids_off', c_uint32),
        ('method_ids_size', c_uint32),
        ('method_ids_off', c_uint32),
        ('class_defs_size', c_uint32),
        ('class_defs_off', c_uint32),
        ('data_size', c_uint32),
        ('data_off', c_uint32),
        ]

class DexStringIdItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('string_data_off', c_uint32),
        ]

class DexStringDataItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size', ULeb128),
        ('data', POINTER(c_uint8)),
        ]

class DexTypeIdItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('descriptor_idx', c_uint32),
        ]

class DexProtoIdItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('shorty_idx', c_uint32),
        ('return_type_idx', c_uint32),
        ('parameters_off', c_uint32),
        ]

class DexFieldIdItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('class_idx', c_uint16),
        ('type_idx', c_uint16),
        ('name_idx', c_uint32),
        ]
    
class DexMethodIdItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('class_idx', c_uint16),
        ('proto_idx', c_uint16),
        ('name_idx', c_uint32),
        ]
    
class DexClassDefItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('class_idx', c_uint32),
        ('access_flags', c_uint32),
        ('superclass_idx', c_uint32),
        ('interfaces_off', c_uint32),
        ('source_file_idx', c_uint32),
        ('annotations_off', c_uint32),
        ('class_data_off', c_uint32),
        ('static_values_off', c_uint32),
        ]

class DexEncodedFieldItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('field_idx_diff',ULeb128),
        ('access_flags',ULeb128),
        ]

class DexEncodedMethodItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('method_idx_diff',ULeb128),
        ('access_flags',ULeb128),
        ('code_off',ULeb128),
        ]

class DexClassDataItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('static_fields_size',ULeb128),
        ('instance_fields_size',ULeb128),
        ('direct_methods_size',ULeb128),
        ('virtual_methods_size',ULeb128),
        ('static_fields',POINTER(POINTER(DexEncodedFieldItem))),
        ('instance_fields',POINTER(POINTER(DexEncodedFieldItem))),
        ('direct_methods',POINTER(POINTER(DexEncodedMethodItem))),
        ('virtual_methods',POINTER(POINTER(DexEncodedMethodItem))),
        ]

class DexTypeItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('type_idx', c_uint16),
        ]

class DexTypeList(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size', c_uint32),
        ('list', POINTER(POINTER(DexTypeItem))),
        ]

class DexTryItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('start_addr', c_uint32),
        ('insns_count', c_uint16),
        ('handler_off', c_uint16),
        ]

class DexEncodedTypeAddrPair(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('type_idx', ULeb128),
        ('addr', ULeb128),
        ]

class DexEncodedCatchHandler(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size', SLeb128),
        ('handlers', POINTER(POINTER(DexEncodedTypeAddrPair))),
        ('catch_all_addr', ULeb128)
        ]

class DexEncodedCatchHandlerList(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size',ULeb128),
        ('list',POINTER(POINTER(DexEncodedCatchHandler))),
        ]

class DexCodeItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('registers_size',c_uint16),
        ('ins_size',c_uint16),
        ('outs_size',c_uint16),
        ('tries_size',c_uint16),
        ('debug_info_off',c_uint32),
        ('insns_size',c_uint32),
        ('insns',POINTER(c_uint16)),
        ('padding',c_uint16),
        ('tries',POINTER(POINTER(DexTryItem))),
        ('handlers',POINTER(DexEncodedCatchHandlerList)),
        ]

class DexDebugInfo(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('line_start', ULeb128),
        ('parameters_size', ULeb128),
        ('parameter_names', POINTER(ULeb128p1)), 
        ('state_machine', POINTER(c_uint8)), 
        ]

class DexMapItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('type',c_uint16),
        ('unused',c_uint16),
        ('size',c_uint32),
        ('offset',c_uint32),
        ]

class DexMapList(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size', c_uint32),
        ('list', POINTER(POINTER(DexMapItem))),
        ]

class DexEncodedValue(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('argtype', c_uint8),
        ('value', POINTER(c_uint8)),
        ]

class DexEncodedArray(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size', ULeb128),
        ('values', POINTER(POINTER(DexEncodedValue))),
        ]

class DexAnnotationElement(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('name_idx', ULeb128),
        ('value', POINTER(DexEncodedValue)),
        ]

class DexEncodedAnnotation(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('type_idx', ULeb128),
        ('size', ULeb128),
        ('elements', POINTER(POINTER(DexAnnotationElement))),
        ]

class DexFieldAnnotation(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('field_idx', c_uint32),
        ('annotations_off', c_uint32),
        ]

class DexMethodAnnotation(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('method_idx', c_uint32),
        ('annotations_off', c_uint32),
        ]

class DexParameterAnnotation(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('method_idx', c_uint32),
        ('annotations_off', c_uint32),
        ]

class DexAnnotationDirectoryItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('class_annotations_off', c_uint32),
        ('fields_size', c_uint32),
        ('annotated_methods_size', c_uint32),
        ('annotated_parameters_size', c_uint32),
        ('field_annotations', POINTER(POINTER(DexFieldAnnotation))),
        ('method_annotations', POINTER(POINTER(DexMethodAnnotation))),
        ('parameter_annotations', POINTER(POINTER(DexParameterAnnotation))),
        ]

class DexAnnotationSetRefItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('annotations_off', c_uint32),
        ]

class DexAnnotationSetRefList(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size', c_uint32),
        ('list', POINTER(POINTER(DexAnnotationSetRefItem))),
        ]

class DexAnnotationOffItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('annotation_off', c_uint32),
        ]

class DexAnnotationSetItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('size', c_uint32),
        ('entries', POINTER(POINTER(DexAnnotationOffItem))),
        ]

class DexAnnotationItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('visibility', c_uint8),
        ('annotation', POINTER(DexEncodedAnnotation)),
        ]

class DexEncodedArrayItem(Structure):
    _fields_ = [
        ('meta', Metadata),
        ('value', POINTER(DexEncodedArray)),
        ]

#Load Library
dxlib = cdll.LoadLibrary("lib/libdexterity.so")
# ByteStream prototypes
dxlib.bsalloc.argtypes = (c_uint,)
dxlib.bsalloc.restype = POINTER(_ByteStream)

dxlib.bsmap.argtypes = (c_char_p,)
dxlib.bsmap.restype = POINTER(_ByteStream)

dxlib.bsfree.argtypes = (POINTER(_ByteStream),)
dxlib.bsfree.restype = c_int

dxlib.bsread.argtypes = (POINTER(_ByteStream),c_char_p)
dxlib.bsread.restype = c_uint

dxlib.bsread_offset.argtypes = (POINTER(_ByteStream),c_char_p,c_uint)
dxlib.bsread_offset.restype = c_uint

dxlib.bsseek.argtypes = (POINTER(_ByteStream),c_uint)
dxlib.bsseek.restype = None

dxlib.bsreset.argtypes = (POINTER(_ByteStream),)
dxlib.bsreset.restype = None

dxlib.bssave.argtypes = (POINTER(_ByteStream),c_char_p)
dxlib.bssave.restype = None

# Leb128 Prototypes
dxlib.ul128toui.argtypes = (Leb128,)
dxlib.ul128toui.restype = c_uint

dxlib.ul128p1toi.argtypes = (Leb128,)
dxlib.ul128p1toi.restype = c_int

dxlib.sl128toi.argtypes = (Leb128,)
dxlib.sl128toi.restype = c_int

#Dex prototypes
def DXPARSE(name,res):
    global dxlib
    getattr(dxlib,name).argtypes = (POINTER(_ByteStream),c_uint32)
    getattr(dxlib,name).restype  = POINTER(res) 
